--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/carousel-2 - Copie.jpg" alt="">
+                <img class="img-fluid" src="img/TOYOTA.png" alt="">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(6, 3, 21, .5);">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -119,7 +119,7 @@
             <div class="row g-5 mx-lg-0">
                 <div class="col-lg-6 ps-lg-0 wow fadeInLeft" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/about.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/about.png" style="object-fit: cover;" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 about-text wow fadeInUp" data-wow-delay="0.3s">
@@ -320,7 +320,7 @@
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeInRight" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/feature.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/FUTURE.png" style="object-fit: cover;" alt="">
                     </div>
                 </div>
             </div>
@@ -399,8 +399,7 @@
     </div> -->
     <!-- Pricing End -->
 
-
-  <!-- Quote Start -->
+ <!-- Quote Start -->
  <div class="container-xxl py-5">
     <div class="container py-5">
         <div class="row g-5 align-items-center">
@@ -425,10 +424,16 @@
                                 <input type="text"  name="Nom du client" form-control border-0" placeholder="Votre Nom" style="height: 55px;">
                             </div>
                             <div class="col-12 col-sm-6">
-                                <input type="email" name="Mail du client"class="form-control border-0" placeholder="Votre E-mail" style="height: 55px;">
+                                <input type="email" name="ville du client"class="form-control border-0" placeholder="Votre Ville" style="height: 55px;">
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="text" name="quartier du client" class="form-control border-0" placeholder="Votre Quartier" style="height: 55px;">
                             </div>
                             <div class="col-12 col-sm-6">
                                 <input type="text" name="Téléphone du client" class="form-control border-0" placeholder="Votre Téléphone" style="height: 55px;">
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="text" name="mail du client" class="form-control border-0" placeholder="Votre E-mail" style="height: 55px;">
                             </div>
                             <div class="col-12 col-sm-6">
                                 <select class="form-select border-0" name="Choix du Fret" style="height: 55px;">
@@ -446,25 +451,25 @@
                                         <option value="4">CEM II B-LL/32.5N</option>
                                 </select>
                                 <select class="form-select border-0" name="Quantité de Ciment" style="height: 55px;">
-                                        <option selected>Quantité de Ciment</option>
-                                        <option value="4">1-5 Tonnes</option>
-                                                <option value="4">5-10 Tonnes</option>
-                                                <option value="4">1-15 Tonnes</option>
+                                        <       option selected>Quantité de Ciment</option>
+                                                <option value="1-5">1-5 Tonnes</option>
+                                                <option value="5-10">5-10 Tonnes</option>
+                                                <option value="1-15">1-15 Tonnes</option>
                                                 <option value="4">15-20 Tonnes</option>
-                                                <option value="4">20-25Tonnes</option>
-                                                <option value="4">Autre Tonnes</option>
+                                                <option value="15-20">20-25Tonnes</option>
+                                                <option value="Autre">Autre Tonnes</option>
                                 </select>
                                 <select class="form-select border-0" name="Choix du Sable" style="height: 55px;">
                                         <option selected>Choix du Sable</option>
-                                        <option value="4">Sable de Fleuve</option>
-                                                <option value="4">Sable Marin</option>
-                                                <option value="4">Remblais</option>
+                                                <option value="Sable de Fleuve">Sable de Fleuve</option>
+                                                <option value="Sable Marin">Sable Marin</option>
+                                                <option value="Remblais">Remblais</option>
                                 </select>
                                 <select class="form-select border-0" name="Autres Services" style="height: 55px;">
                                         <option selected>Autres Services</option>
-                                        <option value="4">Transport</option>
-                                        <option value="5">Negoces</option>
-                                        <option value="6">Entrepot</option>
+                                        <option value="Transport">Transport</option>
+                                        <option value="Negoces">Negoces</option>
+                                        <option value="Entrepot">Entrepot</option>
                                 </select>
                             </div>
                             <div class="col-12">
@@ -513,7 +518,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="team-item p-4">
                     <div class="overflow-hidden mb-4">
-                        <img class="img-fluid" src="img/Anatole.png" alt="">
+                        <img class="img-fluid" src="img/ANATOLE.png" alt="">
                     </div>
                     <h5 class="mb-0"style="text-align: center;">Mr Anatole OBAM</h5>
                     <p style="text-align: center;">Associé</p>
@@ -530,7 +535,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                 <div class="team-item p-4">
                     <div class="overflow-hidden mb-4">
-                        <img class="img-fluid" src="img/Franck.png" alt="">
+                        <img class="img-fluid" src="img/FRANCK.png" alt="">
                     </div>
                     <h5 class="mb-0" style="text-align: center;">Mr Franck MOUSSAVOU</h5>
                     <p style="text-align: center;">Associé</p>
@@ -662,8 +667,13 @@
                 <h4 class="text-light mb-4">Newsletter</h4>
                 <p>Abonnez-vous à notre Newsletter pour ne manquer aucune de nos offres et services.</p>
                 <div class="position-relative mx-auto" style="max-width: 400px;">
-                    <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Votre e-mail">
-                    <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">S'abonner</button>
+                    <form  action="https://formspree.io/f/mldrrzqn"
+                    method="POST">
+                    <input class="form-control border-0 w-100 py-3 ps-4 pe-5" name="Newsletter" type="text" placeholder="Votre e-mail">
+                    <div class="col-12">
+                        <button class="btn btn-primary w-100 py-3" type="submit">S'Abonner</button>
+                    </div>
+                </form>
                 </div>
             </div>
         </div>
