--- a/quote.html
+++ b/quote.html
@@ -78,8 +78,8 @@
             <h1 class="display-3 text-white mb-3 animated slideInDown">Devis</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Accueil</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="index.html">Accueil</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="service.html">Pages</a></li>
                     <li class="breadcrumb-item text-white active" aria-current="page">Devis</li>
                 </ol>
             </nav>
@@ -88,14 +88,15 @@
     <!-- Page Header End -->
 
 
- <!-- Quote Start -->
- <div class="container-xxl py-5">
+ 
+  <!-- Quote Start -->
+  <div class="container-xxl py-5">
     <div class="container py-5">
         <div class="row g-5 align-items-center">
             <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="text-secondary text-uppercase mb-3">Obtenir un dévis</h6>
                 <h1 class="mb-5">Demander un Devis!</h1>
-                <p class="mb-5">Faites-nous parvenir vos commandes et notre service commerciale se chargera de vous proposer un devis personnalisé selon votre budget. </p>
+                <p class="mb-5" style="text-align: justify;">Faites-nous parvenir vos commandes et notre service commerciale se chargera de vous proposer un devis personnalisé selon votre budget. </p>
                 <div class="d-flex align-items-center">
                     <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
                     <div class="ps-4">
@@ -113,10 +114,16 @@
                                 <input type="text"  name="Nom du client" form-control border-0" placeholder="Votre Nom" style="height: 55px;">
                             </div>
                             <div class="col-12 col-sm-6">
-                                <input type="email" name="Mail du client"class="form-control border-0" placeholder="Votre E-mail" style="height: 55px;">
+                                <input type="email" name="ville du client"class="form-control border-0" placeholder="Votre Ville" style="height: 55px;">
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="text" name="quartier du client" class="form-control border-0" placeholder="Votre Quartier" style="height: 55px;">
                             </div>
                             <div class="col-12 col-sm-6">
                                 <input type="text" name="Téléphone du client" class="form-control border-0" placeholder="Votre Téléphone" style="height: 55px;">
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="text" name="mail du client" class="form-control border-0" placeholder="Votre E-mail" style="height: 55px;">
                             </div>
                             <div class="col-12 col-sm-6">
                                 <select class="form-select border-0" name="Choix du Fret" style="height: 55px;">
@@ -134,25 +141,25 @@
                                         <option value="4">CEM II B-LL/32.5N</option>
                                 </select>
                                 <select class="form-select border-0" name="Quantité de Ciment" style="height: 55px;">
-                                        <option selected>Quantité de Ciment</option>
-                                        <option value="4">1-5 Tonnes</option>
-                                                <option value="4">5-10 Tonnes</option>
-                                                <option value="4">1-15 Tonnes</option>
+                                        <       option selected>Quantité de Ciment</option>
+                                                <option value="1-5">1-5 Tonnes</option>
+                                                <option value="5-10">5-10 Tonnes</option>
+                                                <option value="1-15">1-15 Tonnes</option>
                                                 <option value="4">15-20 Tonnes</option>
-                                                <option value="4">20-25Tonnes</option>
-                                                <option value="4">Autre Tonnes</option>
+                                                <option value="15-20">20-25Tonnes</option>
+                                                <option value="Autre">Autre Tonnes</option>
                                 </select>
                                 <select class="form-select border-0" name="Choix du Sable" style="height: 55px;">
                                         <option selected>Choix du Sable</option>
-                                        <option value="4">Sable de Fleuve</option>
-                                                <option value="4">Sable Marin</option>
-                                                <option value="4">Remblais</option>
+                                                <option value="Sable de Fleuve">Sable de Fleuve</option>
+                                                <option value="Sable Marin">Sable Marin</option>
+                                                <option value="Remblais">Remblais</option>
                                 </select>
                                 <select class="form-select border-0" name="Autres Services" style="height: 55px;">
                                         <option selected>Autres Services</option>
-                                        <option value="4">Transport</option>
-                                        <option value="5">Negoces</option>
-                                        <option value="6">Entrepot</option>
+                                        <option value="Transport">Transport</option>
+                                        <option value="Negoces">Negoces</option>
+                                        <option value="Entrepot">Entrepot</option>
                                 </select>
                             </div>
                             <div class="col-12">
@@ -177,8 +184,8 @@
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Adresse</h4>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Matanda, Port-Gentil, GA</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+241 773 908 01</p>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+241 773 908 01">+241 773 908 01</a></p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.org</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -188,10 +195,11 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Services</h4>
-                <a class="btn btn-link" href="">Produits Roulés</a>
-                <a class="btn btn-link" href="">Produits concassés</a>
-                <a class="btn btn-link" href="">Gravier Concassé</a>
-                <a class="btn btn-link" href="">Solutions Logistiques</a>
+                <a class="btn btn-link" href="">Sables</a>
+                <a class="btn btn-link" href="">Graviers</a>
+                <a class="btn btn-link" href="">Remblais</a>
+                <a class="btn btn-link" href="">Latérite</a>
+                <a class="btn btn-link" href="">Solutions logistiques</a>
                 <a class="btn btn-link" href="">Solutions sectorielles</a>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -206,8 +214,13 @@
                 <h4 class="text-light mb-4">Newsletter</h4>
                 <p>Abonnez-vous à notre Newsletter pour ne manquer aucune de nos offres et services.</p>
                 <div class="position-relative mx-auto" style="max-width: 400px;">
-                    <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Votre e-mail">
-                    <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">S'abonner</button>
+                    <form  action="https://formspree.io/f/mldrrzqn"
+                    method="POST">
+                    <input class="form-control border-0 w-100 py-3 ps-4 pe-5" name="Newsletter" type="text" placeholder="Votre e-mail">
+                    <div class="col-12">
+                        <button class="btn btn-primary w-100 py-3" type="submit">S'Abonner</button>
+                    </div>
+                </form>
                 </div>
             </div>
         </div>
@@ -216,7 +229,7 @@
         <div class="copyright">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">BIKENE</a>, Tous droits réservés.
+                    &copy; <a class="border-bottom" href="#">BIKERE</a>, Tous droits réservés.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
